--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,16 @@ img {
     font-size: medium;
 
 }
+.alert {
+    max-width: 560px;
+    text-align: center;
+    padding: 10px;
+    background: #79c879;
+    color: #fff;
+    margin-bottom: 10px;
+    margin: auto;
+    display: none;
+}
 
 footer {
     background-color: #4D243D;
